--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "name": "lamaSocial",
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "name": "lamaShop",
   "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
